--- a/apendice4.tex
+++ b/apendice4.tex
@@ -1,33 +1,11 @@
 \chapter{Terminologia}\label{terminologia}
 \ano{revisar completamente}
 
-\textbf{Conceito} √© a descri√ß√£o de uma categoria baseada num conjunto de exemplos.
-Cada \textbf{exemplo} representa um elemento conhecido ou sob investiga√ß√£o que
-pode ter uma \textbf{classe} \textbf{positiva} ou \textbf{negativa} que √© indicativa
-de o exemplo pertencer ou n√£o √† categoria.
-Por exemplo, o diagn√≥stico para uma doen√ßa pode ter as classes \textit{positiva}
-ou \textit{negativa}; ou, mais diretamente, \textit{doente} e \textit{saud√°vel}.
-A classe positiva √©, em geral, a classe de maior interesse.
-Quando a presen√ßa √© desigual entre os exemplos de cada classe, diz-se que o
-conjunto √© \textbf{desbalanceado}.
-Nesse caso a classe positiva normalmente √© a \textbf{minorit√°ria} -
-a de menor ocorr√™ncia.
 
-
-Um conceito pode ser definido por uma fun√ß√£o.
-Seja $X$ o conjunto de todos os exemplos poss√≠veis - aqueles que resultam de todas as permuta√ß√µes de valores de atributos;
-o conceito $c$ √© uma fun√ß√£o na forma:
-\begin{equation}
-c: X \rightarrow \{-,+\}
-\end{equation}
-onde ``$-$'' representa a classe negativa (e.g, ``saud√°vel'') e ``$+$'' representa a classe positiva (e.g, ``doente'').
-Um conceito tamb√©m pode ser
-representado
-% ilustrado
-por uma fronteira de decis√£o conforme mostrado na Figura \ref{fig:fronteiras}.
-Supondo-se uma \textbf{distribui√ß√£o estacion√°ria}, ou seja, um conceito imut√°vel, pode-se deduzir com certeza o r√≥tulo de qualquer novo exemplo apenas pela sua informa√ß√£o de localiza√ß√£o com rela√ß√£o √† fronteira: se pertencente √† √°rea interna ou externa.
-Por outro lado, se a fronteira de decis√£o representasse uma \textit{hip√≥tese} (CONFORME EXPLICADO ADIANTE),
-n√£o haveria qualquer garantia quanto aos r√≥tulos de novos exemplos com rela√ß√£o √† sua localiza√ß√£o DESNECESS√ÅRIO.
+fronteira de decis„o conforme mostrado na Figura \ref{fig:fronteiras}.
+Supondo-se uma \textbf{distribuiÁ„o estacion·ria}, ou seja, um conceito imut·vel,
+pode-se deduzir com certeza o rÛtulo de qualquer novo exemplo apenas pela sua
+informaÁ„o de localizaÁ„o com relaÁ„o ‡ fronteira: se pertencente ‡ ·rea interna ou externa.
 
 \pgfplotsset{width=12cm,compat=1.5.1}
 \begin{figure}
@@ -39,80 +17,87 @@ n√£o haveria qualquer garantia quanto aos r√≥tulos de novos exemplos com rela√ß√
 }; \addlegendentry{doente}
 \addplot[only marks,mark=text,text mark=\Q{$-$},mark options={red,scale=1}] plot coordinates {
     (40.2,1.6) (41.3,1.65) (42.2,1.70) (50,1.80) (80,1.54) (83,1.66) (85,1.63) (93,1.7)
-}; \addlegendentry{saud√°vel}
+}; \addlegendentry{saud·vel}
 \addplot[thick, mark=none, teal] plot coordinates {
     (57,1.86) (40,1.5) (70,1.55) (95,1.8) (57,1.86)
 };
 \end{axis}
 \end{tikzpicture}
-\caption{Exemplo de fronteira de decis√£o.}
+\caption{Exemplo de fronteira de decis„o.}
 \label{fig:fronteiras}
 \end{center}
 \end{figure}
 
 
-\textbf{Hip√≥tese} √© um conjunto de restri√ß√µes nos atributos normalmente denominado pela letra $h$ \citep{mitchell1997machine}.
-%defini√ß√£o do livro, eu acho que pode haver outros tipos de hipoteses, como por exemplo, restri√ß√µes num espa√ßo de par√¢metros.
-Essas restri√ß√µes delimitam um subconjunto de todos os exemplos poss√≠veis, pois determinam quais valores cada atributo aceita.
-As restri√ß√µes s√£o as necess√°rias justamente para que o subconjunto seja somente de exemplos positivos.
-Reunindo-se todas as hip√≥teses poss√≠veis, tem-se o espa√ßo de hip√≥teses $H$.
-Se houver pelo menos um atributo cont√≠nuo (ou discreto com um n√∫mero infinito de valores), infinitas hip√≥teses s√£o poss√≠veis.
-Em qualquer caso, evidentemente, podem existir hip√≥teses diferentes, por√©m equivalentes.
+\textbf{HipÛtese} È um conjunto de restriÁıes nos atributos normalmente denominado pela
+letra $h$ \citep{mitchell1997machine}.
+%definiÁ„o do livro, eu acho que pode haver outros tipos de hipoteses,
+% como por exemplo, restriÁıes num espaÁo de par‚metros.
+Essas restriÁıes delimitam um subconjunto de todos os exemplos possÌveis,
+pois determinam quais valores cada atributo aceita.
+As restriÁıes s„o as necess·rias justamente para que o subconjunto seja somente de exemplos positivos.
+Reunindo-se todas as hipÛteses possÌveis, tem-se o espaÁo de hipÛteses $H$.
+Se houver pelo menos um atributo contÌnuo (ou discreto com um n˙mero infinito de valores),
+infinitas hipÛteses s„o possÌveis.
+Em qualquer caso, evidentemente, podem existir hipÛteses diferentes, porÈm equivalentes.
 Assim, pode-se dizer que $H = \{h_i | \forall i \in \mathbb{N}^+\}$.
 % (ou seria  $\mathcal{H}$ ??)
-Cada $h$ pode ser descrita como uma fun√ß√£o do mesmo tipo que $c$, mas que aceita apenas elementos do conjunto $\mathcal{D} \subseteq X$ de todos os exemplos que efetivamente se manifestam em uma determinada aplica√ß√£o:
+Cada $h$ pode ser descrita como uma funÁ„o do mesmo tipo que $c$, mas que aceita apenas
+elementos do conjunto $\mathcal{D} \subseteq X$ de todos os exemplos que efetivamente se
+manifestam em uma determinada aplicaÁ„o:
 \begin{equation}
 h: \mathcal{D} \rightarrow \{-,+\}
 \end{equation}
 
 
-A tarefa de \textit{aprendizado de conceito}, dado um conjunto de exemplos L CONTIDO EM XxY? $\mathcal{L}:\{\langle \bm{x}_1, c(\bm{x}_1) \rangle, \langle \bm{x}_2, c(\bm{x}_2) \rangle, ... \}$, tem como objetivo encontrar uma hip√≥tese $h \in H,$ tal que
+A tarefa de \textit{aprendizado de conceito}, dado um conjunto de exemplos L CONTIDO EM XxY? $\mathcal{L}:\{\langle \bm{x}_1, c(\bm{x}_1) \rangle, \langle \bm{x}_2, c(\bm{x}_2) \rangle, ... \}$, tem como objetivo encontrar uma hipÛtese $h \in H,$ tal que
 \begin{equation}
  h(\bm{x}) = c(\bm{x}), \forall \bm{x} \in \mathcal{D}
 \end{equation}
-Por√©m, como tem-se apenas o conjunto $\mathcal{L}$, √© preciso assumir que ele √© representativo de $\mathcal{D}$.
-Esse √© o princ√≠pio do aprendizado indutivo: √© poss√≠vel \textbf{predizer} a classe de novos exemplos baseando-se num conjunto de \textbf{treinamento}.
-Logo, o resultado da indu√ß√£o √© um \textbf{modelo} de representa√ß√£o (DENOMINADO $\theta$) de parte da realidade; capaz de ser usado na generaliza√ß√£o de fatos conhecidos para novas situa√ß√µes.
+PorÈm, como tem-se apenas o conjunto $\mathcal{L}$, È preciso assumir que ele È representativo de $\mathcal{D}$.
+Esse È o princÌpio do aprendizado indutivo: È possÌvel \textbf{predizer} a classe de novos exemplos baseando-se num conjunto de \textbf{treinamento}.
+Logo, o resultado da induÁ„o È um \textbf{modelo} de representaÁ„o (DENOMINADO $\theta$) de parte da realidade; capaz de ser usado na generalizaÁ„o de fatos conhecidos para novas situaÁıes.
 
-Al√©m de depender de $\mathcal{L}$, a hip√≥tese $h$ depende da \textit{linguagem de representa√ß√£o} e do \textit{vi√©s de busca}.
-Ambas s√£o definidas pelo algoritmo de aprendizado.
-O modelo $\theta$ √© descrito pela linguagem de representa√ß√£o, pois ela √© a forma de se representar o conhecimento adquirido -
-√°rvores de decis√£o, neur√¥nios artificiais etc. \citep{quinlan1993c4,haykin1994neural}.
-O \textit{vi√©s de busca}, por sua vez, √© a forma do processo de constru√ß√£o do modelo dentro da linguagem -
-heur√≠stica gulosa, otimiza√ß√£o de fun√ß√µes etc.
-Da mesma forma, os par√¢metros do algoritmo tamb√©m influenciam a elabora√ß√£o de $h$.
+AlÈm de depender de $\mathcal{L}$, a hipÛtese $h$ depende da \textit{linguagem de representaÁ„o} e do \textit{viÈs de busca}.
+Ambas s„o definidas pelo algoritmo de aprendizado.
+O modelo $\theta$ È descrito pela linguagem de representaÁ„o, pois ela È a forma de se representar o conhecimento adquirido -
+·rvores de decis„o, neurÙnios artificiais etc. \citep{quinlan1993c4,haykin1994neural}.
+O \textit{viÈs de busca}, por sua vez, È a forma do processo de construÁ„o do modelo dentro da linguagem -
+heurÌstica gulosa, otimizaÁ„o de funÁıes etc.
+Da mesma forma, os par‚metros do algoritmo tambÈm influenciam a elaboraÁ„o de $h$.
 Esses fatores fazem com que o aprendizado de qualquer modelo seja enviesado.
-Na realidade, sem \textit{vi√©s de aprendizado} n√£o h√° generaliza√ß√£o \citep{mitchell1980need}.
-O vi√©s de aprendizado √© uma das fontes de diversidade entre modelos, OU SEJA, √© UMA DAS ALTERNATIVAS QUE VIABILIZAM a cria√ß√£o de \textit{ensembles}.
+Na realidade, sem \textit{viÈs de aprendizado} n„o h· generalizaÁ„o \citep{mitchell1980need}.
+O viÈs de aprendizado È uma das fontes de diversidade entre modelos, OU SEJA, È UMA DAS ALTERNATIVAS QUE VIABILIZAM a criaÁ„o de \textit{ensembles}.
 
-Em muitos casos, para se gerar $\mathcal{L}$, pode-se amostrar para rotula√ß√£o apenas parte de um conjunto de exemplos n√£o rotulados $\mathcal{U}$ tendo em vista restri√ß√µes de custo.
-A ordem de escolha dos exemplos de treinamento, quando n√£o √© fortuita ou intencionalmente aleat√≥ria, tamb√©m √© caracterizada por um vi√©s.
-Esse vi√©s √© caracter√≠stico do aprendizado ativo abordado no Cap√≠tulo \ref{cap:aprendizado-ativo} e √© um dos pontos de investiga√ß√£o propostos no Cap√≠tulo \ref{cap:plano} enquanto influ√™ncia na constru√ß√£o de $h$.
-Reserva-se aqui o termo \textbf{aprendiz} para representar o algoritmo que √© servido pela amostragem de exemplos com base nesse vi√©s - e reserva-se a express√£o \textbf{aprendiz passivo} para cada algoritmo de aprendizado componente de um \textit{ensemble}.
+Em muitos casos, para se gerar $\mathcal{L}$, pode-se amostrar para rotulaÁ„o apenas parte de um conjunto de exemplos n„o rotulados $\mathcal{U}$ tendo em vista restriÁıes de custo.
+A ordem de escolha dos exemplos de treinamento, quando n„o È fortuita ou intencionalmente aleatÛria, tambÈm È caracterizada por um viÈs.
+Esse viÈs È caracterÌstico do aprendizado ativo abordado no CapÌtulo \ref{cap:aprendizado-ativo} e È um dos pontos de investigaÁ„o propostos no CapÌtulo \ref{cap:plano} enquanto influÍncia na construÁ„o de $h$.
+Reserva-se aqui o termo \textbf{aprendiz} para representar o algoritmo que È servido pela amostragem de exemplos com base nesse viÈs - e reserva-se a express„o \textbf{aprendiz passivo} para cada algoritmo de aprendizado componente de um \textit{ensemble}.
 Por simplicidade, \textbf{aprendiz ativo} refere-se, consequentemente, ao sistema completo: aprendiz e procedimento de amostragem.
-Cada escolha de exemplo numa amostragem ativa √© chamada de \textbf{consulta} e envolve o processo de \textit{rotula√ß√£o} - geralmente custoso nos dom√≠nios onde se opta pelo aprendizado ativo.
-A \textbf{rotula√ß√£o} √© a atribui√ß√£o do r√≥tulo por uma entidade confi√°vel, geralmente humana, mas pass√≠vel de erro.
-Os exemplos ainda n√£o consultados s√£o chamados neste trabalho, por simplicidade, de \textbf{candidatos}.
+Cada escolha de exemplo numa amostragem ativa È chamada de \textbf{consulta} e envolve o processo de \textit{rotulaÁ„o} - geralmente custoso nos domÌnios onde se opta pelo aprendizado ativo.
+A \textbf{rotulaÁ„o} È a atribuiÁ„o do rÛtulo por uma entidade confi·vel, geralmente humana, mas passÌvel de erro.
+Os exemplos ainda n„o consultados s„o chamados neste trabalho, por simplicidade, de \textbf{candidatos}.
 
 
-% \e{\textbf{preciso definir} conjunto de valida√ß√£o . . .  classificador}
+% \e{\textbf{preciso definir} conjunto de validaÁ„o . . .  classificador}
 %
 % \e{\textbf{preciso definir} conhecimento . . . }
 %
-% \e{\textbf{preciso definir} vari√¢ncia. . .   }
+% \e{\textbf{preciso definir} vari‚ncia. . .   }
 
 
-Dado um exemplo $\bm{x}$ e supondo que o modelo $\theta$ seja probabil√≠stico, a probabilidade dele ter um r√≥tulo $y$ √© denotada nas se√ß√µes e cap√≠tulos seguintes por $P$,
-sendo que $\hat{y}$ √© o r√≥tulo mais prov√°vel, ou seja:
+Dado um exemplo $\bm{x}$ e supondo que o modelo $\theta$ seja probabilÌstico, a probabilidade dele ter um rÛtulo $y$ È denotada nas seÁıes e capÌtulos seguintes por $P$,
+sendo que $\hat{y}$ È o rÛtulo mais prov·vel, ou seja:
 \begin{equation}
   \hat{y} = \argmax_y\{ P_{\theta} (y|\bm{x})\}
 \end{equation}
 
-Adicionalmente, e considerando uma constru√ß√£o incremental da hip√≥tese
+Adicionalmente, e considerando uma construÁ„o incremental da hipÛtese
 (de forma a incorporar uma componente temporal $t$ de instante/ordem de chegada),
 o algoritmo de treinamento do modelo $\theta$ pode ser representado por
-$a: \langle \{\theta_1, \theta_2, ...\},X,Y \rangle \rightarrow \{\theta_1, \theta_2, ...\}$, de forma que cada novo modelo $\theta^{(t+1)}$ √© dado por:
+$a: \langle \{\theta_1, \theta_2, ...\},X,Y \rangle \rightarrow \{\theta_1, \theta_2, ...\}$, de forma que cada novo modelo $\theta^{(t+1)}$ È dado por:
 \begin{equation}
   \theta^{(t+1)} = a(\theta^{(t)}, \langle \bm{x},y \rangle), \forall t \in \mathbb{N^{+}}
 \end{equation}
-Note-se que $\bm{x}$ √© apresentado, no restante do texto, como $\bm{x}^{(t)}$ quando necess√°rio.
+Note-se que $\bm{x}$ È apresentado, no restante do texto, como $\bm{x}^{(t)}$ quando necess·rio.
+
