--- a/notacao.tex
+++ b/notacao.tex
@@ -36,6 +36,11 @@ $\bm{a} = \mathbb{R}$ e $p=3.7$.
 O tipo de atributo é dado pela função $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
 atributos nominais e $0$ para atributos numéricos.
 
+% \textbf{Conceito} é a descrição de uma categoria baseada num conjunto de exemplos.
+
+Nesse caso a classe positiva normalmente é a \textbf{minoritária} -
+a de menor ocorrência.
+
 \ano{trazer do apend4 mais notacao}
 
 \begin{itemize}
