--- a/apendice1.tex
+++ b/apendice1.tex
@@ -97,8 +97,8 @@ rotulação
 dos textos.
 Um exemplo de aplicação em que o oráculo é uma máquina, é caso do meta-aprendizado para escolha
 do
-melhor classificador para cada tipo de base de dados.
-Nesse caso, cada base corresponde a um meta-exemplo e o rótulo indica qual o classificador mais
+melhor algoritmo para cada tipo de base de dados.
+Nesse caso, cada base corresponde a um meta-exemplo e o rótulo indica qual o algoritmo de aprendizado mais
 adequado para ela.
 Por isso, o rótulo é obtido apenas depois de todos os classificadores terem sido treinados e
 testados nela.
