--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -44,7 +44,8 @@ excessivamente confiantes que podem ser amenizadas por
 Estratégias que dependem dessas estimativas podem ser prejudicadas.
 Por outro lado,
 por ter um modelo para cada classe, SGmulti pode estar funcionando como \textit{bagging}
-e com isso tendo um maior desempenho para esse classificador.
+\ano{na verdade não é bagging, pois na acurácia é usado apenas um}
+e com isso tendo um maior desempenho para esse algoritmo.
 A maior afinidade de SGmulti com atributos nominais também é um indício de uma
 maior proximidade com NB.
 \ano{para avaliar a suavidade de cada learner,
