--- a/metodologia.tex
+++ b/metodologia.tex
@@ -12,7 +12,7 @@ O critério de diversidade envolveu manter apenas uma dentre cada grupo de bases 
 mesmo domínio - com exceção de algumas que tivessem características
 (atributos, classes e número de exemplos)
 suficientemente diferentes ou cuja acurácia passiva fosse suficientemente distinta para pelo
-menos três dos classificadores mencionados na Seção \ref{learners}.
+menos três dos algoritmos de aprendizadomencionados na Seção \ref{learners}.
 
 \ano{ilustrar o uso de banco de dados, a hierarquia de classes das estratégias;
 fluxograma de 4 fases: queries, hits, measures, sumarização (médias/friedmans = latex)}
@@ -145,7 +145,7 @@ Cada algoritmo de aprendizado tem, intrinsecamente, um viés próprio \ano{REF}.
 ou que o aprendizado seja afetado pela sequência de consultas gerada por uma
 determinada estratégia agnóstica.
 Também pode ser um fator relevante o fato de que, no aprendizado passivo,
-classificadores com boa performance com poucos dados podem ter baixa
+algoritmos com boa performance com poucos dados podem ter baixa
 performance com muitos dados
 \citep{journals/sigkdd/AttenbergP10,journals/jmlr/PerlichPS03}.
 Dessa forma, diferentes algoritmos de aprendizado
@@ -170,7 +170,7 @@ na Seção \ref{elmnovas}.
 outros ajustes: vou pegar no código e help do weka}
 
 \section{Experimento preliminar}\label{preliminar}
-Dado o grande número de estratégias, bases de dados e classificadores envolvidos,
+Dado o grande número de estratégias, bases de dados e algoritmos de aprendizado envolvidos,
 um experimento reduzido \citep{conf/hais/SantosC14} foi conduzido visando
 a construção de um panorama geral do comportamento das estratégias
 e a definição do dimensionamento mais adequado dos experimentos definitivos
