--- a/propostas.tex
+++ b/propostas.tex
@@ -1,6 +1,6 @@
 \chapter{Propostas} \label{propostas}
-O tema desta tese é o uso efetivo do aprendizado de máquina ativo,
-diante da diversidade existente de estratégias.
+O tema desta tese é o uso efetivo do aprendizado de máquina ativo por meio de escolhas
+adequadas diante da diversidade existente de estratégias.
 
 \esb{esboça a estrutura conjunta deste e dos próximos 4 capítulos;
 explica que a contribuição se divide em três partes: análise comparativa,
