--- a/rankplot.tex
+++ b/rankplot.tex
@@ -54,30 +54,30 @@ scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/
 
 
 \addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-\addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=SVMbal] {kappamediaallReduxRank.plot};\addlegendentry{SVMbal}
-\addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=SVMkff] {kappamediaallReduxRank.plot};\addlegendentry{SVMkff}
+\addplot+[solid, red, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=SVMLbal] {kappamediaallReduxRank.plot};\addlegendentry{SVMLbal}
+\addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=SVMLkff] {kappamediaallReduxRank.plot};\addlegendentry{SVMLkff}
 
 
 
-% % \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Ent] {kappamediaallReduxRank.plot};\addlegendentry{Ent}
-% \addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
-% \addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
-% \addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
-% \addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
-% %
-% % \addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
-% % \addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-% %
-% % % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
-% % % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaallReduxRank.plot};\addlegendentry{LUeuc}
-% %
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
-% % \addplot+[solid, dark green, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApman] {kappamediaallReduxRank.plot};\addlegendentry{GATUApman}
-% \addplot+[solid, violet, thick, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
-% % \addplot+[solid, blue, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUApmah}
-% %
-% % \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=EMC] {kappamediaallReduxRank.plot};\addlegendentry{EMC}
-% % \addplot+[solid, dark red, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
+% \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Ent] {kappamediaallReduxRank.plot};\addlegendentry{Ent}
+\addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
+\addplot+[solid, gray, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
+\addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
+\addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
+%
+% \addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
+% \addplot+[dotted, green!50!black, thick, mark options={solid, scale=1}, mark=*, mark repeat=200, mark phase=1] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
+%
+% % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
+% % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaallReduxRank.plot};\addlegendentry{LUeuc}
+%
+\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
+% \addplot+[solid, dark green, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApman] {kappamediaallReduxRank.plot};\addlegendentry{GATUApman}
+\addplot+[solid, violet, thick, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
+% \addplot+[solid, blue, mark=*, mark options={solid, scale=2}, mark repeat=200, mark phase=120] table[x=budget, y=GATUApmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUApmah}
+%
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=EMC] {kappamediaallReduxRank.plot};\addlegendentry{EMC}
+% \addplot+[solid, dark red, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
