--- a/tese.tex
+++ b/tese.tex
@@ -4,6 +4,7 @@
 % \usepackage{array}
 \usepackage{amsmath}
 \usepackage{wasysym}
+% \usepackage{mathtools}
 
 % \usepackage{bm}
 % \usepackage{stmaryrd}
