--- a/contexto.tex
+++ b/contexto.tex
@@ -3,12 +3,12 @@ Neste capítulo, são introduzidos os temas pertinentes a esta tese.
 Na Seção \ref{apsup},
 a classificação em aprendizado de máquina é apresentada.
 O assunto central, que engloba o aprendizado ativo e suas principais estratégias,
-é introduzido nas seções \ref{aprendizado-ativo} e \ref{estrategias}.
+é introduzido nas seções \ref{aprendizado-ativo} e \ref{estrategias} respectivamente.
 A Seção \ref{notacao} antecede a exposição das estratégias visando
 definir a notação adotada na descrição delas e no restante do documento.
 Na Seção \ref{elmorig}, as \elms são especificamente detalhadas por serem os algoritmos
 de aprendizado mais recentes dentre os empregados, pela sua ausência na literatura de
-aprendizado ativo e pelo desenvolvimento de uma estratégia específica para ela (Capítulo \ref{proposta}).
+aprendizado ativo e pela adaptação de uma estratégia específica para ela (Capítulo \ref{propostas}).
 Finalmente, na Seção \ref{meta}, é feita uma breve revisão sobre meta-aprendizado.
 \ano{os outros classificadores vão ser mencionados
 neste capítulo ou só a partir do cap. de metodologia?}
@@ -47,9 +47,9 @@ A identificação da categoria de determinado objeto de interesse
 de agentes inteligentes e é chamada de \textit{classificação}.
 Essa, por sua vez, depende de um \textit{modelo} baseado nos
 dados fornecidos por um supervisor.
-A indução desse modelo é um processo de \textit{aprendizado}.
+A indução desse modelo ocorre por meio de um processo de \textit{aprendizado}.
 
-Aprendizado de máquina é a área que engloba algoritmos capazes de
+\textit{Aprendizado de máquina} é a área que engloba algoritmos capazes de
 aprender - construir modelos - sem
 programação explícita \citep{journals/cacm/Valiant84}.
 Diversas tarefas como \ano{tarefa de máquina 1, tarefa2, ... REFERENCIA}
