--- a/notacao.tex
+++ b/notacao.tex
@@ -1,59 +1,100 @@
 \section{Terminologia e notação}\label{notacao}
 O conjunto de símbolos e termos empregados neste texto são definidos nesta seção.
-Ele é baseado no livro de \cite{series/synthesis/2012Settles} juntamente com a notação
-normalmente utilizada na literatura de
-\elms e meta-aprendizado \citep{journals/tsmc/HuangZDZ12,books/daglib/0022052}.
+Ele é baseado no livro de \cite{series/synthesis/2012Settles}, mas adaptado para ser compatível
+com a literatura de \elms e meta-aprendizado
+\citep{journals/tsmc/HuangZDZ12,books/daglib/0022052}.
+\ano{realmente usa alguma notação de meta-aprendizado?}
+Embora a maioria dos algoritmos empregados nos experimentos sejam por
+\ing{lote de exemplos}{batch}, a notação assume que o aprendizado ocorre incrementalmente
+por meio do subscrito $(t), t \in \mathbb{N}$ que representa a iteração ou quantidade de exemplos
+incorporados ao treinamento até o momento.
+O uso de parênteses visa diferenciá-lo mais claramente do subscrito convencional de vetores que
+indica o valor para uma dada posição.
 
-O termo \textit{algoritmo de aprendizado} é substituído por \textit{classificador}
-quando se trata do produto do processo, isto é, o modelo capaz de classificar exemplos.
-Durante a indução do modelo, se ele integrar uma estratégia de aprendizado ativo,
+O termo \textit{classificador} é utilizado quando se trata do produto esperado do processo
+realizado pelo \textit{algoritmo de aprendizado}.
+A classificação de exemplos se baseia no último modelo $\theta$ induzido pelo algoritmo.
+Durante a indução, se o algoritmo integrar uma estratégia de aprendizado ativo,
 ele é chamado de \textit{aprendiz}.
-Apesar de contradizer o princípio motivador do aprendizado ativo explicitado
+Apesar de contradizerem o princípio motivador do aprendizado ativo explicitado
 na Seção \ref{aprendizado-ativo},
-existem estratégias sem aprendiz - chamadas \textit{agnósticas}.
+existem estratégias sem aprendiz, chamadas \textit{agnósticas}.
+Os exemplos ainda não consultados são chamados, neste trabalho,
+de \textit{candidatos}.
 Cada \textit{consulta} de uma dada estratégia ao \textit{oráculo} visa a obtenção
 do \textit{rótulo} que indica a \textit{classe} de um dado exemplo.
-A classe $c$ pertence ao conjunto de classes possíveis $C$ para um dado problema e
-é representada por um vetor binário $\bm{y} \in Y$, sendo $Y$ formalmente definido pela Equação \ref{ydef}.
+A determinação da classe de um exemplo é chamada de \textit{rotulação}.
+Uma classe $c$ pertence ao conjunto de classes possíveis $C$ para um dado problema e
+é representada por um vetor binário $\bm{y} \in Y$,
+sendo $Y$ formalmente definido pela Equação \ref{ydef}.
 \begin{equation}\label{ydef}
  Y = \{\bm{y} \mid y_o=1, y_p=0 \forall o \neq p, 1 \leq p \leq |C|\}
 \end{equation}
-A representação binária do vetor de atributos preditivos $\bm{y}$
-tem valores que respeitam a restrição de que apenas uma classe é aceita por exemplo.
+Essa representação binária, por exemplo, $\Y=\{(0,0,1),(0,1,0),(1,0,0)\}$,
+é conhecida como \ing{um-de-n}{one-hot encoding} (\cite{Harris:2007:DDC})
+O vetor $\bm{y}=\{0,1,0\}$ é um exemplo de \textit{representação de classe} e é
+chamado apenas de \textit{classe} de um dado exemplo por conveniência.
 
-O subscrito $(t), t \in \mathbb{N}$ é usado quando o contexto exige situar o aprendizado
+O indicador de iteração $(t)$ é usado quando o contexto exige situar o aprendizado
 no tempo, na medida em que a quantidade de exemplos aumenta um a um.
-Os atributos descritivos de um exemplo é dado por uma tupla (ou vetor, quando o contexto for de álgebra linear)
+O conjunto de valores assumidos pelos atributos \textit{descritivos} de um exemplo
+é dado por uma tupla\footnote {Ou vetor, quando o contexto for de álgebra linear.}
 $\bm{x}$ pertencente ao conjunto $X$ de exemplos possíveis.
 Dessa forma, a representação completa de um exemplo é um par \ano{dupla/tupla?}
-$\langle \bm{x}_{(t)}, \bm{y}_{(t)} \rangle$.
-
-$A$ é o conjunto de atributos descritivos.
-Cada atributo $\bm{a} \in A$ é o conjunto de todos os valores que cada posição
-$p \in \{x_i \mid 1 \leq i < \dime{\bm{x}}\}$ da tupla/vetor $\bm{x}$ pode assumir,
-por exemplo $\bm{a}=\{\textit{alto},\textit{medio},\textit{baixo}\}$ e $p=medio$ ou
-$\bm{a} = \mathbb{R}$ e $p=3.7$.
+$\langle \bm{x}_{(t)}, \bm{y}_{(t)} \rangle \in X\times Y$.
+Os valores possíveis de cada componente de $\bm{x}$ são dados por um conjunto
+$\bm{a}$ pertencente a $A$. $A$ é o conjunto de atributos descritivos de um dado problema.
+Assim, cada atributo $\bm{a} \in A$ é o conjunto de todos os valores que cada componente
+$b \in \{x_i \mid 1 \leq i < \dime{\bm{x}}\}$ da tupla/vetor $\bm{x}$ pode assumir,
+por exemplo $\bm{a}=\{\textit{alto},\textit{medio},\textit{baixo}\}$ e $b=medio$ ou
+$\bm{a} = \mathbb{R}$ e $b=3.7$.
 O tipo de atributo é dado pela função $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
 atributos nominais e $0$ para atributos numéricos.
 
-% \textbf{Conceito} é a descrição de uma categoria baseada num conjunto de exemplos.
 
-Nesse caso a classe positiva normalmente é a \textbf{minoritária} -
-a de menor ocorrência.
 
-\ano{trazer do apend4 mais notacao}
+Dado um exemplo $\bm{x}$ e supondo que o modelo $\theta$ permita
+estimação da probabilidade de $\bm{x}$ ter a classe $\bm{y}$,
+ela é denotada por $P_{\theta}$,
+sendo que $\hat{\bm{y}}$ é classe mais mais provável conforme a Equação \ref{p}.
+\begin{equation}\label{p}
+  \hat{\bm{y}} = \argmax_{\bm{y}} P_{\theta} (\bm{y}|\bm{x})
+\end{equation}
+
+% Adicionalmente, e considerando uma construção incremental da hipótese
+% (de forma a incorporar uma componente temporal $t$ de instante/ordem de chegada),
+% o algoritmo de treinamento do modelo $\theta$ pode ser representado por
+% $a: \langle \{\theta_1, \theta_2, ...\},X,Y \rangle \rightarrow \{\theta_1, \theta_2, ...\}$, de forma que cada novo modelo $\theta^{(t+1)}$ é dado por:
+% \begin{equation}
+%   \theta^{(t+1)} = a(\theta^{(t)}, \langle \bm{x},y \rangle), \forall t \in \mathbb{N^{+}}
+% \end{equation}
+
+
+\ano{vvvvvvvvvvvvvvvvvvvvvvv}
+
+A classe \textit{minoritária} é a de menor ocorrência e a \textit{majoritária} a de maior ocorrência.
+
 
 \begin{itemize}
  \item $\X$ - conjunto de tuplas de atributos descritivos (numéricos e nominais),
     ou seja, todos os exemplos matematicamente possíveis (sem informação de classe);
   \item $\x \in \X$ - tupla de atributos que descrevem um exemplo;
-  \item $\Y$ - conjunto de vetores em notação \tra{um-de-n}{one-hot encoding}
-    (\cite{Harris:2007:DDC}) que representa todas as classes possíveis,
-    por exemplo: $\Y=\{(0,0,1),(0,1,0),(1,0,0)\}$;
+  \item $\Y$ - conjunto de vetores;
   \item $\y \in Y$ - vetor de atributos que classificam um exemplo;
   \item $\yt$,$\xt$ - o subscrito $t \in \mathbb{N}$ indica que o exemplo
     é parte de uma sequência para aprendizado incremental;
 %  $o$, $y_o=1$ e $y_p=0 \forall o \neq p, 1 \leq p \leq |Y|$;
+a quantidade inicial de exemplos é
+$|\mathcal{U}|$ - mantendo a notação
+usual de os símbolos $\mathcal{U}$ e $\mathcal{L}$ representarem a
+reserva de exemplos \citep{series/synthesis/2012Settles}
+e o conjunto de exemplos já rotulados, respectivamente.
+$ID$ densidade de informação
+$TU$ utilidade de treinamento
+$Inf(\bm{x})$ medida de informatividade
+$d(\bm{x},\bm{u})$ medida de distância
+$sim(\bm{x},\bm{u})$ medida de similaridade
+$\cent$ orçamento ou número de consultas
 
   \item $\U$ - \pool inicial;
   \item $\Ut$ - \pool no instante $t$;
@@ -73,19 +114,3 @@ ou seja, com maior \textit{informatividade}.
 O limite de duração para processamento computacional entre consultas
 é chamado \ing{tempo de espera tolerável}{tolerable waiting time},
 pois é o tempo efetivamente sentido pelo oráculo.
-
-
-
-
-\esb{ e a quantidade inicial de exemplos é
-$|\mathcal{U}|$ - mantendo a notação
-usual de os símbolos $\mathcal{U}$ e $\mathcal{L}$ representarem a
-reserva de exemplos \citep{series/synthesis/2012Settles}
-e o conjunto de exemplos já rotulados, respectivamente.}
-$ID$ densidade de informação
-$TU$ utilidade de treinamento
-$Inf(\bm{x})$ medida de informatividade
-$d(\bm{x},\bm{u})$ medida de distância
-$sim(\bm{x},\bm{u})$ medida de similaridade
-$\cent$ orçamento ou número de consultas
-
